[gd_scene load_steps=68 format=3 uid="uid://dihh7kxwckc0s"]

[ext_resource type="Texture2D" uid="uid://cnb6rjfntbdc" path="res://assets/sprites/smuggling/secreet_room.png" id="1_8jisk"]
[ext_resource type="Script" path="res://scripts/smuggling/level_smuggling.gd" id="1_njvly"]
[ext_resource type="PackedScene" uid="uid://brsaa2tlclx0n" path="res://scenes/scaleton.tscn" id="2_5vua6"]
[ext_resource type="Texture2D" uid="uid://bifvk0mb0vfp5" path="res://assets/sprites/smuggling/foreground_cargo.png" id="3_auv8t"]
[ext_resource type="AudioStream" uid="uid://tyxssya4yfpi" path="res://assets/sfx/secret_door.mp3" id="3_ohdd4"]
[ext_resource type="Texture2D" uid="uid://bkd7v1x5xijl5" path="res://assets/sprites/smuggling/bottom_pipe.png" id="4_lv5qx"]
[ext_resource type="Texture2D" uid="uid://8wjpdc3nii57" path="res://assets/sprites/smuggling/table.png" id="5_j0p1m"]
[ext_resource type="Texture2D" uid="uid://bh7fuol0vqov1" path="res://assets/sprites/smuggling/tables.png" id="6_kgpfk"]
[ext_resource type="Texture2D" uid="uid://dqwj1rej6ljxl" path="res://assets/sprites/smuggling/cargo.png" id="7_8a63h"]
[ext_resource type="Texture2D" uid="uid://d2emvpwk53prc" path="res://assets/sprites/smuggling/small_table.png" id="7_xmubk"]
[ext_resource type="Script" path="res://scripts/smuggling/water_drop.gd" id="9_4v0li"]
[ext_resource type="Texture2D" uid="uid://3potoi5maxfg" path="res://assets/sprites/smuggling/drops.png" id="9_hr5mk"]
[ext_resource type="Script" path="res://scripts/smuggling/valve.gd" id="9_k3ohj"]
[ext_resource type="AudioStream" uid="uid://d1i3r1uterolv" path="res://assets/sfx/drop.mp3" id="11_bfshs"]
[ext_resource type="Script" path="res://scripts/smuggling/cargo.gd" id="12_3jsop"]
[ext_resource type="AudioStream" uid="uid://c6ay40ac8nl1y" path="res://assets/sfx/valve.mp3" id="13_wtjn0"]
[ext_resource type="Texture2D" uid="uid://e83o0l53qcsx" path="res://assets/sprites/smuggling/valve.png" id="14_ulfhx"]
[ext_resource type="Script" path="res://scripts/detail_view.gd" id="16_0pkqw"]
[ext_resource type="AudioStream" uid="uid://dugg5ikaijoyb" path="res://assets/sfx/paper_show.mp3" id="17_a51xl"]
[ext_resource type="AudioStream" uid="uid://qtakh14vnhwc" path="res://assets/sfx/paper_hide.mp3" id="18_pkm8y"]
[ext_resource type="FontFile" uid="uid://chymuad6xnic4" path="res://assets/text/scaleton.ttf" id="19_3is00"]
[ext_resource type="Texture2D" uid="uid://dc1a0b6ho5rfb" path="res://assets/sprites/home/note.png" id="20_b7evv"]
[ext_resource type="AudioStream" uid="uid://dbcbt0ji8hn8f" path="res://assets/sfx/push_cargo.mp3" id="22_1t1ao"]
[ext_resource type="Script" path="res://scripts/smuggling/move_to_tonell.gd" id="23_13elr"]
[ext_resource type="Texture2D" uid="uid://c0taoj5efou8i" path="res://assets/sprites/smuggling/tonell.png" id="25_15f2v"]
[ext_resource type="Script" path="res://scripts/smuggling/back_to_secreet_room.gd" id="26_08p17"]
[ext_resource type="Script" path="res://scripts/smuggling/smuggling_camera.gd" id="26_ndoaw"]
[ext_resource type="Script" path="res://scripts/smuggling/exit_tonell.gd" id="27_rc818"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cu1ka"]
size = Vector2(148, 56)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7bh0s"]
size = Vector2(144, 56)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ly5mu"]
size = Vector2(917.5, 168)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_870fu"]
size = Vector2(144, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n7dkb"]
size = Vector2(108, 168.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vsbfn"]
size = Vector2(48.5, 493)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qmrt8"]
size = Vector2(48.5, 509.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mleg3"]
size = Vector2(132.25, 182.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r1og1"]
size = Vector2(768.125, 43.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nwkqd"]
size = Vector2(98, 65.625)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xbvjl"]
size = Vector2(79, 12.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gfy4r"]
size = Vector2(113.5, 12.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uxex7"]
size = Vector2(744, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_0mrs0"]
atlas = ExtResource("9_hr5mk")
region = Rect2(0, 0, 7, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_7wt8t"]
atlas = ExtResource("9_hr5mk")
region = Rect2(7, 0, 7, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_66hsm"]
atlas = ExtResource("9_hr5mk")
region = Rect2(14, 0, 7, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_m7jul"]
atlas = ExtResource("9_hr5mk")
region = Rect2(21, 0, 7, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_dt750"]
atlas = ExtResource("9_hr5mk")
region = Rect2(28, 0, 7, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_hns07"]
atlas = ExtResource("9_hr5mk")
region = Rect2(35, 0, 7, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_pk7k1"]
atlas = ExtResource("9_hr5mk")
region = Rect2(42, 0, 7, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_q4655"]
atlas = ExtResource("9_hr5mk")
region = Rect2(49, 0, 7, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_th60i"]
atlas = ExtResource("9_hr5mk")
region = Rect2(56, 0, 7, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_urxh5"]
atlas = ExtResource("9_hr5mk")
region = Rect2(63, 0, 7, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qcbo"]
atlas = ExtResource("9_hr5mk")
region = Rect2(70, 0, 7, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdxvs"]
atlas = ExtResource("9_hr5mk")
region = Rect2(77, 0, 7, 41)

[sub_resource type="SpriteFrames" id="SpriteFrames_0634q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0mrs0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7wt8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_66hsm")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_m7jul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dt750")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hns07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pk7k1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4655")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_th60i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urxh5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qcbo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdxvs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0mrs0")
}],
"loop": false,
"name": &"falling",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w834p"]
size = Vector2(208, 109)

[sub_resource type="Animation" id="Animation_ckuni"]
resource_name = "rotate_valve"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("valve_sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(3, 3, 3),
"update": 0,
"values": [0.0, 1.0472, 1.39626]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xwdrv"]
_data = {
"close_water": SubResource("Animation_ckuni")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8vpf5"]
size = Vector2(146, 149)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dj0ih"]
size = Vector2(143.5, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rb82h"]
size = Vector2(124, 54)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tbjlr"]
size = Vector2(48.5, 606.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1pmfc"]
size = Vector2(48.25, 215)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uu73p"]
size = Vector2(48.5, 456.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4wm0d"]
size = Vector2(48.5, 624)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_obaup"]
size = Vector2(780.125, 273.531)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8r5ng"]
size = Vector2(781.063, 48.3828)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vjr7u"]
size = Vector2(156, 16)

[node name="smuggling" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_njvly")

[node name="secreet_room" type="Node2D" parent="."]
y_sort_enabled = true

[node name="background" type="Sprite2D" parent="secreet_room"]
position = Vector2(960, 540)
scale = Vector2(6, 6)
texture = ExtResource("1_8jisk")

[node name="secreet_door_sfx" type="AudioStreamPlayer" parent="secreet_room"]
stream = ExtResource("3_ohdd4")

[node name="collisions" type="Node2D" parent="secreet_room"]

[node name="top_wall" type="Node2D" parent="secreet_room/collisions"]

[node name="left" type="StaticBody2D" parent="secreet_room/collisions/top_wall"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="secreet_room/collisions/top_wall/left"]
z_index = 1
position = Vector2(441, 395)
shape = SubResource("RectangleShape2D_cu1ka")

[node name="right" type="StaticBody2D" parent="secreet_room/collisions/top_wall"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="secreet_room/collisions/top_wall/right"]
z_index = 1
position = Vector2(696, 395)
shape = SubResource("RectangleShape2D_7bh0s")

[node name="bottom_wall" type="Node2D" parent="secreet_room/collisions"]

[node name="left" type="StaticBody2D" parent="secreet_room/collisions/bottom_wall"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="secreet_room/collisions/bottom_wall/left"]
position = Vector2(849.25, 996)
shape = SubResource("RectangleShape2D_ly5mu")

[node name="center" type="StaticBody2D" parent="secreet_room/collisions/bottom_wall"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="secreet_room/collisions/bottom_wall/center"]
position = Vector2(1380, 1086)
shape = SubResource("RectangleShape2D_870fu")

[node name="right" type="StaticBody2D" parent="secreet_room/collisions/bottom_wall"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="secreet_room/collisions/bottom_wall/right"]
position = Vector2(1506, 995.75)
shape = SubResource("RectangleShape2D_n7dkb")

[node name="left_wall" type="StaticBody2D" parent="secreet_room/collisions"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="secreet_room/collisions/left_wall"]
position = Vector2(377.25, 670.5)
shape = SubResource("RectangleShape2D_vsbfn")

[node name="right_wall" type="StaticBody2D" parent="secreet_room/collisions"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="secreet_room/collisions/right_wall"]
position = Vector2(1548, 656.75)
shape = SubResource("RectangleShape2D_qmrt8")

[node name="table" type="StaticBody2D" parent="secreet_room/collisions"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="secreet_room/collisions/table"]
position = Vector2(467.875, 646.75)
shape = SubResource("RectangleShape2D_mleg3")

[node name="chairs_and_cupboard" type="StaticBody2D" parent="secreet_room/collisions"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="secreet_room/collisions/chairs_and_cupboard"]
position = Vector2(1145.94, 422)
shape = SubResource("RectangleShape2D_r1og1")

[node name="valve" type="StaticBody2D" parent="secreet_room/collisions"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="secreet_room/collisions/valve"]
position = Vector2(1481, 433.188)
shape = SubResource("RectangleShape2D_nwkqd")

[node name="tables" type="Node2D" parent="secreet_room/collisions"]

[node name="table1" type="StaticBody2D" parent="secreet_room/collisions/tables"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="secreet_room/collisions/tables/table1"]
position = Vector2(1478.5, 702.25)
shape = SubResource("RectangleShape2D_xbvjl")

[node name="table2" type="StaticBody2D" parent="secreet_room/collisions/tables"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="secreet_room/collisions/tables/table2"]
position = Vector2(1441.25, 660)
shape = SubResource("RectangleShape2D_gfy4r")

[node name="table3" type="StaticBody2D" parent="secreet_room/collisions/tables"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="secreet_room/collisions/tables/table3"]
position = Vector2(1472, 606)
shape = SubResource("RectangleShape2D_xbvjl")

[node name="foreground_cargo" type="StaticBody2D" parent="secreet_room/collisions"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="secreet_room/collisions/foreground_cargo"]
position = Vector2(828, 906.5)
shape = SubResource("RectangleShape2D_uxex7")

[node name="foreground" type="Node2D" parent="secreet_room"]
z_index = 2
y_sort_enabled = true

[node name="cargo-foreground" type="Sprite2D" parent="secreet_room/foreground"]
position = Vector2(828, 837)
scale = Vector2(6, 6)
texture = ExtResource("3_auv8t")

[node name="bottom_pipe" type="Sprite2D" parent="secreet_room/foreground"]
position = Vector2(612, 876)
scale = Vector2(6, 6)
texture = ExtResource("4_lv5qx")

[node name="table" type="Sprite2D" parent="secreet_room/foreground"]
position = Vector2(459, 498)
scale = Vector2(6, 6)
texture = ExtResource("5_j0p1m")
offset = Vector2(0, 20)

[node name="tables" type="Sprite2D" parent="secreet_room/foreground"]
visible = false
position = Vector2(1473, 540)
scale = Vector2(6, 6)
texture = ExtResource("6_kgpfk")
offset = Vector2(0, 10)

[node name="tables2" type="Node2D" parent="secreet_room/foreground"]
y_sort_enabled = true

[node name="table1" type="Sprite2D" parent="secreet_room/foreground/tables2"]
position = Vector2(1500, 618)
scale = Vector2(6, 6)
texture = ExtResource("7_xmubk")
offset = Vector2(0, 5)

[node name="table2" type="Sprite2D" parent="secreet_room/foreground/tables2"]
position = Vector2(1446, 576)
scale = Vector2(6, 6)
texture = ExtResource("7_xmubk")
offset = Vector2(0, 5)

[node name="table3" type="Sprite2D" parent="secreet_room/foreground/tables2"]
position = Vector2(1494, 522)
scale = Vector2(6, 6)
texture = ExtResource("7_xmubk")
offset = Vector2(0, 5)

[node name="water_drop" type="Node2D" parent="secreet_room/foreground"]
y_sort_enabled = true
script = ExtResource("9_4v0li")

[node name="drop_animation" type="AnimatedSprite2D" parent="secreet_room/foreground/water_drop"]
position = Vector2(1035, 369)
scale = Vector2(6, 6)
sprite_frames = SubResource("SpriteFrames_0634q")
animation = &"falling"
offset = Vector2(0, -4)

[node name="drop_sfx" type="AudioStreamPlayer2D" parent="secreet_room/foreground/water_drop"]
position = Vector2(1027, 480)
stream = ExtResource("11_bfshs")
volume_db = -3.0
attenuation = 3.0

[node name="interactions" type="Node2D" parent="secreet_room"]
y_sort_enabled = true

[node name="valve" type="Area2D" parent="secreet_room/interactions" groups=["interactable"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("9_k3ohj")
interaction_limit = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="secreet_room/interactions/valve"]
position = Vector2(1421, 428.5)
shape = SubResource("RectangleShape2D_w834p")

[node name="valve_sfx" type="AudioStreamPlayer" parent="secreet_room/interactions/valve"]
stream = ExtResource("13_wtjn0")
volume_db = -3.0
pitch_scale = 0.8

[node name="valve_sprite" type="Sprite2D" parent="secreet_room/interactions/valve"]
z_index = 1
position = Vector2(1461, 357)
scale = Vector2(6, 6)
texture = ExtResource("14_ulfhx")

[node name="AnimationPlayer" type="AnimationPlayer" parent="secreet_room/interactions/valve"]
libraries = {
"": SubResource("AnimationLibrary_xwdrv")
}

[node name="note" type="Area2D" parent="secreet_room/interactions" groups=["interactable"]]
position = Vector2(-304, -294)
collision_layer = 2
collision_mask = 2
script = ExtResource("16_0pkqw")
sfx_on_show = ExtResource("17_a51xl")
sfx_on_hide = ExtResource("18_pkm8y")

[node name="CanvasLayer" type="CanvasLayer" parent="secreet_room/interactions/note"]
layer = 3
visible = false

[node name="RichTextLabel" type="Label" parent="secreet_room/interactions/note/CanvasLayer"]
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -338.0
offset_top = -445.0
offset_right = 335.0
offset_bottom = 455.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 10
theme_override_fonts/font = ExtResource("19_3is00")
theme_override_font_sizes/font_size = 34
text = "Entry #311 - October 1923

50 crates of Whole Milk: Delivered under the cover of night to the Blue Moon Cafe.
25 crates of Spiced Milk: Dropped at the Old Theatre's back entrance.
Payment: 60 silver coins, 15 golden tokens, and a rare jazz record.

Rumors are spreading about our passage. We must be more discreet.
Urgent: Change the piano code for the secret door. 
New code - C major scale, to throw off any suspicion.
 
Keep your bones light and steps quiet. The milk flows, but so do prying eyes."
vertical_alignment = 1
autowrap_mode = 3

[node name="Sprite2D" type="Sprite2D" parent="secreet_room/interactions/note/CanvasLayer"]
position = Vector2(974, 528)
scale = Vector2(6.11151, 6.11151)
texture = ExtResource("20_b7evv")

[node name="dim" type="ColorRect" parent="secreet_room/interactions/note/CanvasLayer"]
z_index = -1
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0.588235)

[node name="CollisionShape2D" type="CollisionShape2D" parent="secreet_room/interactions/note"]
z_index = 1
position = Vector2(849, 872.5)
shape = SubResource("RectangleShape2D_8vpf5")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="secreet_room/interactions/note"]
volume_db = -3.0

[node name="cargo" type="RigidBody2D" parent="secreet_room/interactions"]
z_index = 2
y_sort_enabled = true
position = Vector2(5, -5)
gravity_scale = 0.0
lock_rotation = true
linear_damp = 50.0
script = ExtResource("12_3jsop")

[node name="Sprite2D" type="Sprite2D" parent="secreet_room/interactions/cargo"]
position = Vector2(582, 330)
scale = Vector2(6, 6)
texture = ExtResource("7_8a63h")
offset = Vector2(0, 5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="secreet_room/interactions/cargo"]
position = Vector2(582.25, 441)
shape = SubResource("RectangleShape2D_dj0ih")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="secreet_room/interactions/cargo"]
stream = ExtResource("22_1t1ao")
volume_db = -80.0

[node name="exit_secreet_room" type="Area2D" parent="secreet_room/interactions"]
collision_layer = 2
collision_mask = 2
script = ExtResource("23_13elr")
auto_interact = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="secreet_room/interactions/exit_secreet_room"]
position = Vector2(572, 380)
shape = SubResource("RectangleShape2D_rb82h")

[node name="global" type="DirectionalLight2D" parent="."]
color = Color(1, 1, 0, 1)
energy = 0.38
blend_mode = 1

[node name="scaleton" parent="." instance=ExtResource("2_5vua6")]
position = Vector2(1377, 1078)
collision_layer = 3

[node name="tonell" type="Node2D" parent="."]

[node name="background" type="Sprite2D" parent="tonell"]
position = Vector2(960, 1720)
scale = Vector2(6, 6)
texture = ExtResource("25_15f2v")

[node name="collisions" type="Node2D" parent="tonell"]

[node name="left_wall_bottom" type="StaticBody2D" parent="tonell/collisions"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="tonell/collisions/left_wall_bottom"]
position = Vector2(468, 1957.25)
shape = SubResource("RectangleShape2D_tbjlr")

[node name="left_wall_top" type="StaticBody2D" parent="tonell/collisions"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="tonell/collisions/left_wall_top"]
position = Vector2(1247.88, 1287.5)
shape = SubResource("RectangleShape2D_1pmfc")

[node name="right_wall_bottom" type="StaticBody2D" parent="tonell/collisions"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="tonell/collisions/right_wall_bottom"]
position = Vector2(672, 2032.13)
shape = SubResource("RectangleShape2D_uu73p")

[node name="right_wall_top" type="StaticBody2D" parent="tonell/collisions"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="tonell/collisions/right_wall_top"]
position = Vector2(1452, 1492)
shape = SubResource("RectangleShape2D_4wm0d")

[node name="center_wall_top" type="StaticBody2D" parent="tonell/collisions"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="tonell/collisions/center_wall_top"]
position = Vector2(881.938, 1531.77)
shape = SubResource("RectangleShape2D_obaup")

[node name="center_wall_bottom" type="StaticBody2D" parent="tonell/collisions"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="tonell/collisions/center_wall_bottom"]
position = Vector2(1086.53, 1828.19)
shape = SubResource("RectangleShape2D_8r5ng")

[node name="back_to_secreet_room" type="Area2D" parent="tonell/collisions"]
collision_layer = 2
collision_mask = 2
script = ExtResource("26_08p17")
auto_interact = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="tonell/collisions/back_to_secreet_room"]
position = Vector2(570, 2252)
shape = SubResource("RectangleShape2D_vjr7u")

[node name="exit_tonell" type="Area2D" parent="tonell/collisions"]
collision_layer = 2
collision_mask = 2
script = ExtResource("27_rc818")
auto_interact = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="tonell/collisions/exit_tonell"]
position = Vector2(1350, 1188)
shape = SubResource("RectangleShape2D_vjr7u")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(960, 540)
script = ExtResource("26_ndoaw")

[connection signal="animation_finished" from="secreet_room/foreground/water_drop/drop_animation" to="secreet_room/foreground/water_drop" method="_on_drop_animation_animation_finished"]
[connection signal="frame_changed" from="secreet_room/foreground/water_drop/drop_animation" to="secreet_room/foreground/water_drop" method="_on_drop_animation_frame_changed"]
[connection signal="water_closed" from="secreet_room/interactions/valve" to="secreet_room/foreground/water_drop" method="_on_valve_water_closed"]
[connection signal="to_tonell" from="secreet_room/interactions/exit_secreet_room" to="Camera2D" method="_on_exit_secreet_room_to_tonell"]
[connection signal="reached_point_to_walk" from="scaleton" to="." method="_on_scaleton_reached_point_to_walk"]
[connection signal="to_secreet_room" from="tonell/collisions/back_to_secreet_room" to="Camera2D" method="_on_back_to_secreet_room_to_secreet_room"]
